tests-system/tuples-7/output
z optional Integer
  ^^^^^^^^ tuples-7/foo.rsl:6: error: optional only permitted in tuples with separators
Processed 1 model, 0 checks and 0 requirement files and found 1 error
